# CardGames

./: .gitignore  CMakeLists.txt  README.md
Baccarat/: CMakeLists.txt
CardGames/: CMakeLists.txt  card.cpp  deck.cpp  deckFactory.cpp  faceCard.cpp
app/: CMakeLists.txt  main.cpp
include/CardGames/: card.h  deck.h  deckFactory.h  faceCard.h
